fix: adjust checkbox mark positioning for better alignment and consistency

--- a/source/styles/blocks/control.scss
+++ b/source/styles/blocks/control.scss
@@ -72,9 +72,11 @@
 }
 
 .control--checkbox .control__input:checked + .control__mark::before {
+  top: 2px;
   left: 20px;
   width: 20px;
   height: 20px;
+  transform: none;
   background-color: $color-base-white;
 }
 
@@ -85,6 +87,12 @@
 .control__input:disabled + .control__mark {
   background-color: $color-base-light-grey;
   border-color: $color-base-light-grey;
+}
+
+.control--checkbox .control__input:disabled + .control__mark {
+  flex: 0 0 42px;
+  width: 42px;
+  border-radius: 12px;
 }
 
 .control__input:disabled + .control__mark::before {
